--- a/Back/pyproject.toml
+++ b/Back/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["Your Name <you@example.com>"]
 readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.11"
@@ -17,6 +18,9 @@ sqlmodel = "^0.0.14"
 pydantic-settings = "^2.1.0"
 psycopg2 = "^2.9.9"
 gunicorn = "^22.0.0"
+python-jose = {extras = ["cryptography"], version = "^3.4.0"}
+python-multipart = "^0.0.20"
+passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 
 
 [build-system]
