--- a/Back/pyproject.toml
+++ b/Back/pyproject.toml
@@ -20,7 +20,10 @@ psycopg2 = "^2.9.9"
 gunicorn = "^22.0.0"
 python-jose = {extras = ["cryptography"], version = "^3.4.0"}
 python-multipart = "^0.0.20"
-passlib = {extras = ["bcrypt"], version = "^1.7.4"}
+alembic = "^1.14.1"
+email-validator = "^2.2.0"
+bcrypt = "4.0.1"
+passlib = "1.7.4"
 
 
 [build-system]
