--- a/soft-skills-front/package.json
+++ b/soft-skills-front/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^4.1.3",
     "@mui/icons-material": "^6.4.7",
     "@mui/material": "^6.4.7",
+    "camelcase-keys": "^9.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
