Complete learning goal CRUD with frontend and MongoDB integration
- Added create, read, and delete support in the frontend using Zustand and toasts
- Synced backend changes to persist learning goals in MongoDB
- Ensured pagination and toast feedback for smooth UX
- This sets the foundation for detailed goal views and nested objective management

--- a/soft-skills-back/.env.example
+++ b/soft-skills-back/.env.example
@@ -8,3 +8,4 @@ DB_PORT=<your-database-port>
 # Auth
 ACCESS_TOKEN_EXPIRE_MINUTES=1440
 SECRET_KEY=<your-secret-key>
+MONGODB_URI=<your-mongo-db-connection>
