--- a/soft-skills-front/package.json
+++ b/soft-skills-front/package.json
@@ -20,6 +20,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.3.0",
     "reactflow": "^11.11.4",
     "zod": "^3.24.2",
