--- a/soft-skills-front/package.json
+++ b/soft-skills-front/package.json
@@ -17,12 +17,14 @@
     "@mui/material": "^6.4.7",
     "camelcase-keys": "^9.1.3",
     "immer": "^10.1.1",
+    "lucide-react": "^0.507.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.3.0",
     "reactflow": "^11.11.4",
+    "uuid": "^11.1.0",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
@@ -32,6 +34,7 @@
     "@types/node": "^22.13.10",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
