--- a/soft-skills-front/package.json
+++ b/soft-skills-front/package.json
@@ -24,6 +24,7 @@
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.3.0",
     "reactflow": "^11.11.4",
+    "snakecase-keys": "^8.0.1",
     "uuid": "^11.1.0",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
