--- a/soft-skills-front/package.json
+++ b/soft-skills-front/package.json
@@ -15,6 +15,8 @@
     "@hookform/resolvers": "^4.1.3",
     "@mui/icons-material": "^6.4.7",
     "@mui/material": "^6.4.7",
+    "@tanstack/react-query": "^5.85.5",
+    "@tanstack/react-query-devtools": "^5.85.5",
     "camelcase-keys": "^9.1.3",
     "immer": "^10.1.1",
     "lucide-react": "^0.507.0",
