--- a/soft-skills-back/pyproject.toml
+++ b/soft-skills-back/pyproject.toml
@@ -13,7 +13,7 @@ uvicorn = "0.25.0"
 httpie = "3.2.2"
 requests = "2.31.0"
 httpx = "0.26.0"
-pydantic = "2.5.3"
+pydantic = "^2.7.4"
 sqlmodel = "^0.0.14"
 pydantic-settings = "^2.1.0"
 psycopg2 = "^2.9.9"
@@ -26,6 +26,10 @@ bcrypt = "4.0.1"
 passlib = "1.7.4"
 isort = "^6.0.1"
 pymongo = "^4.12.0"
+pyyaml = "^6.0.3"
+langchain = "^1.0.2"
+langchain-openai = "^1.0.1"
+langchain-core = "^1.0.1"
 
 
 [build-system]
