--- a/soft-skills-back/pyproject.toml
+++ b/soft-skills-back/pyproject.toml
@@ -30,6 +30,8 @@ pyyaml = "^6.0.3"
 langchain = "^1.0.2"
 langchain-openai = "^1.0.1"
 langchain-core = "^1.0.1"
+elevenlabs = "^1.25.0"
+supabase = "^2.10.0"
 
 
 [build-system]
