--- a/soft-skills-front/package.json
+++ b/soft-skills-front/package.json
@@ -20,11 +20,13 @@
     "@tanstack/react-query": "^5.85.5",
     "@tanstack/react-query-devtools": "^5.85.5",
     "camelcase-keys": "^9.1.3",
+    "i18next": "^25.6.1",
     "immer": "^10.1.1",
     "lucide-react": "^0.507.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
+    "react-i18next": "^16.2.4",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.3.0",
     "reactflow": "^11.11.4",
