--- a/vercel.json
+++ b/vercel.json
@@ -6,11 +6,10 @@
       "use": "@vercel/python"
     },
     {
-      "src": "soft-skills-front/package.json",
+      "src": "package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "dist",
-        "buildCommand": "cd soft-skills-front && npm install && npm run build"
+        "distDir": "soft-skills-front/dist"
       }
     }
   ],
