--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -2,9 +2,9 @@
 fastapi==0.111.0
 uvicorn==0.30.1
 starlette==0.37.2
-pydantic==2.8.2
+pydantic>=2.11.7,<3.0.0
 pydantic-settings==2.3.4
-pydantic_core==2.20.1
+pydantic_core>=2.20.1
 
 # Database
 sqlmodel==0.0.19
