--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -32,6 +32,9 @@ python-dotenv==1.0.0
 email-validator==2.2.0
 
 # LLM and AI services
+langchain>=1.0.2
+langchain-openai>=1.0.1
+langchain-core>=1.0.1
 elevenlabs==1.59.0
 supabase==2.22.3
 
