feat: configure Vercel deployment with APP_MODULE and environment-based CORS
- Replace custom index.py handler with APP_MODULE approach
- Move requirements.txt to soft-skills-back directory
- Configure CORS origins via CORS_ORIGINS environment variable
- Update vercel.json to use main.py with APP_MODULE
- Remove unnecessary api/index.py handler

--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/index.py",
+      "src": "soft-skills-back/main.py",
       "use": "@vercel/python"
     },
     {
@@ -16,7 +16,7 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/api/index.py"
+      "dest": "/soft-skills-back/main.py"
     },
     {
       "src": "/(.*)",
@@ -24,7 +24,7 @@
     }
   ],
   "env": {
-    "PYTHONPATH": "soft-skills-back"
+    "APP_MODULE": "main:app"
   }
 }
 
