--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,13 @@
 {
   "version": 2,
+  "installCommand": "pip install -r soft-skills-back/requirements.txt && cd soft-skills-front && npm install",
   "builds": [
     {
       "src": "soft-skills-back/main.py",
-      "use": "@vercel/python"
+      "use": "@vercel/python",
+      "config": {
+        "maxLambdaSize": "50mb"
+      }
     },
     {
       "src": "package.json",
