--- a/soft-skills-back/pyproject.toml
+++ b/soft-skills-back/pyproject.toml
@@ -20,6 +20,7 @@ psycopg2 = "^2.9.9"
 gunicorn = "^22.0.0"
 python-jose = {extras = ["cryptography"], version = "^3.4.0"}
 python-multipart = "^0.0.20"
+python-dotenv = "^1.0.0"
 alembic = "^1.14.1"
 email-validator = "^2.2.0"
 bcrypt = "4.0.1"
