--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,12 @@
 {
   "version": 2,
-  "installCommand": "pip install -r soft-skills-back/requirements.txt && cd soft-skills-front && npm install",
   "builds": [
     {
       "src": "soft-skills-back/main.py",
       "use": "@vercel/python",
       "config": {
-        "maxLambdaSize": "50mb"
+        "maxLambdaSize": "50mb",
+        "runtime": "python3.11"
       }
     },
     {
