--- a/soft-skills-back/vercel.json
+++ b/soft-skills-back/vercel.json
@@ -6,6 +6,12 @@
       "use": "@vercel/python"
     }
   ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "main.py"
+    }
+  ],
   "env": {
     "APP_MODULE": "main:app"
   }
