--- a/soft-skills-front/vercel.json
+++ b/soft-skills-front/vercel.json
@@ -8,6 +8,12 @@
         "distDir": "dist"
       }
     }
+  ],
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
   ]
 }
 
